Fixed visibility isssue

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,8 @@
 
 .banner {
     width: 100%;
-    height: 50vh;
+    height: 20vh;
+    background-color: grey;
     background-size: cover;
     background-position: center;
 }
